--- a/style.css
+++ b/style.css
@@ -1,107 +1,93 @@
-body{
-    margin: 0;
-   font-family: Arial;
-    }
-  .container{
-    width: 1280px
-      margin: 0 auto;
-    
-  }
-  .page-header{
-    width: 100%;
-    background-color: #445162;
-    padding: 50px;
-    box-sizing: border-box;
-  }
-  .page-header:after {
-    content:"";
-    display: block;
-    width: 100%;
-    clear: both;
-  }
-  .page-header-text{
-    color: #ffffff;
-  float: left;
-  }
-  .page-header-title{
-    font-size: 60px;
-  line-height: 1.2;
-  font-weight: 400;
-    display: block;
-margin: 0 0 40px 0;
-  }
-  .page-header-list{
-    font-size: 20px;
-  line-height: 36px;
-  font-weight: 400;
-    margin: 0;
-    padding: 0 0 0 40px;
-    
-  }
-  .ph-item{
-    list-style-type: none;
-    position: relative;
-  }
-  .ph-item:before {
-    content:"";
-    display: block;
-    width: 25px;
-  height: 19px;
-      background-image: url(img/check_icon_349.png);
-      position: absolute;
-      top:10px ;
-      left: -38px;
-    
-  }
-  .page-header-img {
-    display: block;
-    width: 469px;
-    height: 214px;
-    background-color: #fff;
-    color: black;
-float: right; 
-  }
-  .content{
-    width: 100%;
-  background-color: #fff;
-  padding: 50px;
-box-sizing: border-box;
+body {
+  width: 1280px;
+  margin: 0;
+  font-family: arial;
 }
-.content :after {
-  content:"";
+.container {
+}
+.main-header {
+  background-color: #445162;
+  width: 100%;
+  padding: 50px;
+  color: #ffffff;
+  box-sizing: border-box;
+}
+.main-header::after {
+  content: "";
   display: block;
   width: 100%;
   clear: both;
 }
-.About-product{
-
-
+.main-header-wrp {
+  width: 500px;
+  float: left;
 }
-.about-product-wrp{
-float: left;
-width: 652px
+.main-header-title {
+  margin: 0 0 50px 0;
+  font-size: 60px;
+  line-height: 1.2;
+  font-weight: 400;
 }
-.about-product-title{
-font-size: 30px;
-line-height: 36px;
-font-weight: 400;
-color: #445161;
-display: block;
-margin: 0 0 30px 0;
-
+.main-header-list {
+  margin: 0 0 0 0;
+  font-size: 20px;
+  line-height: 36px;
+  font-weight: 400;
+  list-style-type: none;
 }
-.about-product-txt{
-font-size: 16px;
-line-height: 24px;
-font-weight: 400;
-color: #333333;
-margin: 0 0 20px 0;
-
+.main-header-list-item {
+  position: relative;
 }
-.about-product-video{
-    display: block;
+.main-header-list-item:before {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 20px;
+  /* border: 1px solid red; */
+  position: absolute;
+  top: 7px;
+  left: -35px;
+  background-image: url(img/check.png);
+  background-size: cover;
+}
+.main-header-img {
+  background-color: #fff;
+  display: block;
+  width: 469px;
+  height: 214px;
+  float: right;
+}
+.content {
+  width: 100%;
+}
+.about-product {
+  background-color: #fff;
+  padding: 50px;
+  display: flex;
+  justify-content: space-between;
+}
+.about-product-wrp {
+  width: 651px;
+}
+.about-product-title {
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 400;
+  color: #445161;
+  margin: 0 0 30px 0;
+}
+.about-product-text {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  color: #333333;
+  margin: 0 0 20px 0;
+}
+.about-product-video {
+  display: block;
   width: 430px;
   height: 245px;
-  background-color: #445162;
-float: right;
+  background-color: #445161;
+}
+.dignity {
 }
