--- a/style.css
+++ b/style.css
@@ -90,4 +90,53 @@ body {
   background-color: #445161;
 }
 .dignity {
+  width: 100%;
+  background-color: #f5f5f5;
+  padding: 50px;
+}
+.dignity-title {
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 400;
+  color: #445161;
+  text-align: center;
+  margin: 0 0 29px 0;
+}
+.dignity-text {
+  display: flex;
+}
+.dignity-item-wrp {
+  width: 50%;
+}
+.dignity-item {
+  width: 100%;
+  margin: 0 0 35px 0;
+  min-height: 30px;
+  box-sizing: border-box;
+  padding: 0 0 0 64px;
+}
+.dignity-item-title {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  color: #333333;
+  display: block;
+  position: relative;
+}
+.dignity-item-title::-webkit-details-marker {
+  display: none;
+}
+.dignity-item-title:before {
+  content: "+";
+  display: block;
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  background-color: #445161;
+  color: #fff;
+  font-size: 30px;
+  text-align: center;
+  top: 5px;
+  left: -40px;
+  line-height: 31px;
 }
