--- a/style.css
+++ b/style.css
@@ -257,3 +257,170 @@ details[open] summary:before {
   display: block;
   margin: 15px 0 16px 0;
 }
+
+.buy {
+  padding: 50px;
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-end;
+  min-height: 656px;
+}
+.buy-title {
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 400;
+  color: #445161;
+  text-align: center;
+  width: 100%;
+}
+.buy-item {
+  width: 300px;
+  /* height: 306px; */
+  background-color: #445162;
+}
+.buy-item-title {
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: 400;
+  color: #ffffff;
+  text-align: center;
+  margin: 17px 0 17px 0;
+}
+.price {
+  font-size: 40px;
+  line-height: 30px;
+  font-weight: 400;
+  color: #445162;
+  background-color: #fff;
+  text-align: center;
+  width: 300px;
+  height: 71px;
+  border: 2px solid #445162;
+  box-sizing: border-box;
+  margin: 0 0 0 0;
+  padding: 18px;
+}
+.buy-list {
+  padding: 0 0 0 20px;
+  margin: 19px 0 19px 0;
+}
+.buy-list-items {
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 400;
+  color: #ffffff;
+  list-style-position: inside; /*меняет положение цифр(маркера ) в ровень с текстом */
+}
+.buy-btn {
+  display: block;
+  width: 260px;
+  height: 40px;
+  background-color: #ffffff;
+  text-transform: uppercase;
+  font-size: 18px;
+  line-height: 18px;
+  font-weight: 700;
+  color: #445161;
+  border-radius: 8px;
+  margin: 0 auto;
+}
+.footer {
+  box-sizing: border-box;
+  background-color: #445161;
+  width: 100%;
+  padding: 50px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.contacts {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.footer-title {
+  width: 100%;
+  display: block;
+  margin: 0 0 31px 0;
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 400;
+  color: #ffffff;
+  text-align: center;
+}
+.footer-form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 500px;
+  margin: 0 46px 0 0;
+}
+.footer-form input[type="text"],
+.footer-form input[type="email"] {
+  width: 100%;
+  height: 40px;
+  margin: 0 0 20px 0;
+  padding: 10px;
+  box-sizing: border-box;
+  border: 1px solid gray;
+  border-radius: 5px;
+  background-color: #ffffff;
+  outline: none;
+  text-transform: capitalize;
+}
+.footer-form textarea {
+  width: 500px;
+  height: 170px;
+  margin: 0 0 20px 0;
+  background-color: #ffffff;
+  border-radius: 7px;
+  padding: 10px;
+  box-sizing: border-box;
+  outline: none;
+  border: 1px solid#445162;
+  outline: none;
+}
+input[placeholder],
+textarea[placeholder] {
+  font-family: Arial;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  color: #445162;
+  resize: none; /*убирает возможность менять поле ввода */
+}
+.footer-form input[type="submit"] {
+  width: 140px;
+  height: 40px;
+  background-color: #ffffff;
+  text-align: center;
+  font-family: Arial;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #445162;
+  border: 1px solid#445162;
+  border-radius: 7px;
+}
+
+.footer_contacts {
+  width: 240px;
+  height: 300px;
+  background-color: white;
+}
+.footer-form input[type="text"]:hover,
+.footer-form input[type="email"]:hover,
+.footer-form textarea:hover {
+  background-color: gray;
+  color: #fff;
+}
+.footer-form textarea:focus {
+  border: 2px solid red;
+}
+.footer-form input[type="submit"]:hover {
+  background-color: gray;
+  color: #fff;
+}
