--- a/style.css
+++ b/style.css
@@ -406,11 +406,6 @@ textarea[placeholder] {
   border-radius: 7px;
 }
 
-.footer_contacts {
-  width: 240px;
-  height: 300px;
-  background-color: white;
-}
 .footer-form input[type="text"]:hover,
 .footer-form input[type="email"]:hover,
 .footer-form textarea:hover {
@@ -423,4 +418,64 @@ textarea[placeholder] {
 .footer-form input[type="submit"]:hover {
   background-color: gray;
   color: #fff;
+}
+.footer_contacts {
+  width: 250px;
+  height: 350px;
+  background-color: #445162;
+}
+.contacts-list {
+  list-style-type: none;
+  margin: 0;
+}
+.contacts-item {
+  margin: 0 0 30px 0;
+  font-family: ArialMT;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+}
+.social {
+  width: 250px;
+  border: 1px solid black;
+  display: flex;
+  box-sizing: border-box;
+}
+.social-item {
+  display: block;
+
+  width: 50px;
+  height: 42px;
+  border: 1px solid green;
+  background-image: url(img/social_buttons_338.png);
+}
+.item1 {
+  background-position: 0 0;
+}
+.item2 {
+  background-position: -47px 0;
+}
+.item3 {
+  background-position: 144px 0;
+}
+.item4 {
+  background-position: 94px 0;
+}
+.item5 {
+  background-position: -193px 0;
+}
+.item1:hover {
+  background-position: 0 1px;
+}
+.item2:hover {
+  background-position: -47px 1px;
+}
+.item3:hover {
+  background-position: 144px 1px;
+}
+.item4:hover {
+  background-position: 94px 1px;
+}
+.item5:hover {
+  background-position: -193px 1px;
 }
