--- a/style.css
+++ b/style.css
@@ -420,6 +420,7 @@ textarea[placeholder] {
   color: #fff;
 }
 .footer_contacts {
+  font-family: Arial;
   width: 250px;
   height: 350px;
   background-color: #445162;
@@ -427,17 +428,50 @@ textarea[placeholder] {
 .contacts-list {
   list-style-type: none;
   margin: 0;
-}
-.contacts-item {
-  margin: 0 0 30px 0;
-  font-family: ArialMT;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
+  color: #ffffff;
 }
+.contacts-item {
+  margin: 0 0 29px 0;
+
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  position: relative;
+}
+
+.contacts-item::before {
+  content: "";
+  display: block;
+  width: 26px;
+  height: 26px;
+
+  box-sizing: border-box;
+  position: absolute;
+  top: 0px;
+  left: -35px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.skype::before {
+  background-image: url(img/skype_icon_319.png);
+}
+.icq::before {
+  background-image: url(img/icq_icon_324.png);
+}
+.mail::before {
+  background-image: url(img/email_icon_332.png);
+}
+.number::before {
+  background-image: url(img/phone_icon_337.png);
+}
+
 .social {
   width: 250px;
-  border: 1px solid black;
+
   display: flex;
   box-sizing: border-box;
 }
@@ -446,7 +480,7 @@ textarea[placeholder] {
 
   width: 50px;
   height: 42px;
-  border: 1px solid green;
+
   background-image: url(img/social_buttons_338.png);
 }
 .item1 {
